forms in angular template +reactive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,4 +34,6 @@
     </div>
   </div>
 </nav>
-<router-outlet></router-outlet>
+<!-- <app-template-forms></app-template-forms> -->
+<a [routerLink]="['/checkout']">Move to Checkout</a>
+<router-outlet> </router-outlet>
